script-parser/src/lib/antlr/InfluxParser.ts
// Generated from ./src/lib/antlr/Influx.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { InfluxVisitor } from "./InfluxVisitor";


export class InfluxParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly AUTH = 4;
	public static readonly CONFIG = 5;
	public static readonly DEF = 6;
	public static readonly IF = 7;
	public static readonly WITH = 8;
	public static readonly AND = 9;
	public static readonly OF = 10;
	public static readonly THEN = 11;
	public static readonly TYPE = 12;
	public static readonly EMA = 13;
	public static readonly RSI = 14;
	public static readonly MACD = 15;
	public static readonly ENDPOINT = 16;
	public static readonly USERNAME = 17;
	public static readonly PASSWORD = 18;
	public static readonly URL = 19;
	public static readonly PERIOD = 20;
	public static readonly INTERVAL = 21;
	public static readonly DESCRIPTION = 22;
	public static readonly PRICEKEY = 23;
	public static readonly METHOD = 24;
	public static readonly HEADERS = 25;
	public static readonly BASICAUTH = 26;
	public static readonly PARAMS = 27;
	public static readonly OPERATOR = 28;
	public static readonly URL_STRING = 29;
	public static readonly REQUESTMETHOD = 30;
	public static readonly TEXT = 31;
	public static readonly LITERALS = 32;
	public static readonly WHITESPACE = 33;
	public static readonly NEWLINE = 34;
	public static readonly QUOTE = 35;
	public static readonly SYMBOL = 36;
	public static readonly RULE_influx = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_command = 2;
	public static readonly RULE_auth = 3;
	public static readonly RULE_config = 4;
	public static readonly RULE_definition = 5;
	public static readonly RULE_condition = 6;
	public static readonly RULE_defType = 7;
	public static readonly RULE_organization = 8;
	public static readonly RULE_username = 9;
	public static readonly RULE_password = 10;
	public static readonly RULE_name = 11;
	public static readonly RULE_period = 12;
	public static readonly RULE_url = 13;
	public static readonly RULE_ema1 = 14;
	public static readonly RULE_ema2 = 15;
	public static readonly RULE_interval = 16;
	public static readonly RULE_description = 17;
	public static readonly RULE_pricekey = 18;
	public static readonly RULE_requestMethod = 19;
	public static readonly RULE_requestHeaders = 20;
	public static readonly RULE_requestBasicAuth = 21;
	public static readonly RULE_requestParams = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"influx", "line", "command", "auth", "config", "definition", "condition", 
		"defType", "organization", "username", "password", "name", "period", "url", 
		"ema1", "ema2", "interval", "description", "pricekey", "requestMethod", 
		"requestHeaders", "requestBasicAuth", "requestParams",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "':'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, "AUTH", "CONFIG", "DEF", "IF", 
		"WITH", "AND", "OF", "THEN", "TYPE", "EMA", "RSI", "MACD", "ENDPOINT", 
		"USERNAME", "PASSWORD", "URL", "PERIOD", "INTERVAL", "DESCRIPTION", "PRICEKEY", 
		"METHOD", "HEADERS", "BASICAUTH", "PARAMS", "OPERATOR", "URL_STRING", 
		"REQUESTMETHOD", "TEXT", "LITERALS", "WHITESPACE", "NEWLINE", "QUOTE", 
		"SYMBOL",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(InfluxParser._LITERAL_NAMES, InfluxParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return InfluxParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Influx.g4"; }

	// @Override
	public get ruleNames(): string[] { return InfluxParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return InfluxParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(InfluxParser._ATN, this);
	}
	// @RuleVersion(0)
	public influx(): InfluxContext {
		let _localctx: InfluxContext = new InfluxContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, InfluxParser.RULE_influx);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 46;
				this.line();
				}
				}
				this.state = 49;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << InfluxParser.AUTH) | (1 << InfluxParser.CONFIG) | (1 << InfluxParser.DEF) | (1 << InfluxParser.IF))) !== 0));
			this.state = 51;
			this.match(InfluxParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let _localctx: LineContext = new LineContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, InfluxParser.RULE_line);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this.command();
			this.state = 54;
			this.match(InfluxParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public command(): CommandContext {
		let _localctx: CommandContext = new CommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, InfluxParser.RULE_command);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case InfluxParser.AUTH:
				{
				this.state = 56;
				this.auth();
				}
				break;
			case InfluxParser.CONFIG:
				{
				this.state = 57;
				this.config();
				}
				break;
			case InfluxParser.DEF:
				{
				this.state = 58;
				this.definition();
				}
				break;
			case InfluxParser.IF:
				{
				this.state = 59;
				this.condition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public auth(): AuthContext {
		let _localctx: AuthContext = new AuthContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, InfluxParser.RULE_auth);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 62;
			this.match(InfluxParser.AUTH);
			this.state = 63;
			this.match(InfluxParser.WHITESPACE);
			this.state = 64;
			this.organization();
			this.state = 65;
			this.match(InfluxParser.WHITESPACE);
			this.state = 66;
			this.match(InfluxParser.WITH);
			this.state = 67;
			this.match(InfluxParser.WHITESPACE);
			this.state = 70;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case InfluxParser.USERNAME:
				{
				this.state = 68;
				this.username();
				}
				break;
			case InfluxParser.PASSWORD:
				{
				this.state = 69;
				this.password();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 72;
			this.match(InfluxParser.WHITESPACE);
			this.state = 73;
			this.match(InfluxParser.AND);
			this.state = 74;
			this.match(InfluxParser.WHITESPACE);
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case InfluxParser.USERNAME:
				{
				this.state = 75;
				this.username();
				}
				break;
			case InfluxParser.PASSWORD:
				{
				this.state = 76;
				this.password();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public config(): ConfigContext {
		let _localctx: ConfigContext = new ConfigContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, InfluxParser.RULE_config);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(InfluxParser.CONFIG);
			this.state = 80;
			this.match(InfluxParser.WHITESPACE);
			this.state = 81;
			this.name();
			this.state = 82;
			this.match(InfluxParser.WHITESPACE);
			this.state = 83;
			this.match(InfluxParser.WITH);
			this.state = 84;
			this.match(InfluxParser.WHITESPACE);
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case InfluxParser.URL:
				{
				this.state = 85;
				this.url();
				}
				break;
			case InfluxParser.INTERVAL:
				{
				this.state = 86;
				this.interval();
				}
				break;
			case InfluxParser.DESCRIPTION:
				{
				this.state = 87;
				this.description();
				}
				break;
			case InfluxParser.PRICEKEY:
				{
				this.state = 88;
				this.pricekey();
				}
				break;
			case InfluxParser.METHOD:
				{
				this.state = 89;
				this.requestMethod();
				}
				break;
			case InfluxParser.HEADERS:
				{
				this.state = 90;
				this.requestHeaders();
				}
				break;
			case InfluxParser.BASICAUTH:
				{
				this.state = 91;
				this.requestBasicAuth();
				}
				break;
			case InfluxParser.PARAMS:
				{
				this.state = 92;
				this.requestParams();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === InfluxParser.WHITESPACE) {
				{
				{
				this.state = 95;
				this.match(InfluxParser.WHITESPACE);
				this.state = 96;
				this.match(InfluxParser.AND);
				this.state = 97;
				this.match(InfluxParser.WHITESPACE);
				this.state = 106;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case InfluxParser.URL:
					{
					this.state = 98;
					this.url();
					}
					break;
				case InfluxParser.INTERVAL:
					{
					this.state = 99;
					this.interval();
					}
					break;
				case InfluxParser.DESCRIPTION:
					{
					this.state = 100;
					this.description();
					}
					break;
				case InfluxParser.PRICEKEY:
					{
					this.state = 101;
					this.pricekey();
					}
					break;
				case InfluxParser.METHOD:
					{
					this.state = 102;
					this.requestMethod();
					}
					break;
				case InfluxParser.HEADERS:
					{
					this.state = 103;
					this.requestHeaders();
					}
					break;
				case InfluxParser.BASICAUTH:
					{
					this.state = 104;
					this.requestBasicAuth();
					}
					break;
				case InfluxParser.PARAMS:
					{
					this.state = 105;
					this.requestParams();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public definition(): DefinitionContext {
		let _localctx: DefinitionContext = new DefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, InfluxParser.RULE_definition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(InfluxParser.DEF);
			this.state = 114;
			this.match(InfluxParser.WHITESPACE);
			this.state = 115;
			this.name();
			this.state = 116;
			this.match(InfluxParser.WHITESPACE);
			this.state = 117;
			this.match(InfluxParser.OF);
			this.state = 118;
			this.match(InfluxParser.WHITESPACE);
			this.state = 119;
			this.match(InfluxParser.TYPE);
			this.state = 120;
			this.match(InfluxParser.WHITESPACE);
			this.state = 121;
			this.defType();
			this.state = 139;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === InfluxParser.WHITESPACE) {
				{
				this.state = 122;
				this.match(InfluxParser.WHITESPACE);
				this.state = 123;
				this.match(InfluxParser.WITH);
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 124;
					this.match(InfluxParser.WHITESPACE);
					this.state = 133;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case InfluxParser.PERIOD:
						{
						this.state = 125;
						this.period();
						}
						break;
					case InfluxParser.URL:
						{
						this.state = 126;
						this.url();
						}
						break;
					case InfluxParser.LITERALS:
						{
						{
						this.state = 127;
						this.ema1();
						this.state = 128;
						this.match(InfluxParser.WHITESPACE);
						this.state = 129;
						this.match(InfluxParser.AND);
						this.state = 130;
						this.match(InfluxParser.WHITESPACE);
						this.state = 131;
						this.ema2();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					this.state = 137;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === InfluxParser.WHITESPACE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public condition(): ConditionContext {
		let _localctx: ConditionContext = new ConditionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, InfluxParser.RULE_condition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this.match(InfluxParser.IF);
			this.state = 142;
			this.match(InfluxParser.WHITESPACE);
			this.state = 143;
			this.match(InfluxParser.LITERALS);
			this.state = 144;
			this.match(InfluxParser.WHITESPACE);
			this.state = 145;
			this.match(InfluxParser.OPERATOR);
			this.state = 146;
			this.match(InfluxParser.WHITESPACE);
			this.state = 147;
			this.match(InfluxParser.LITERALS);
			this.state = 148;
			this.match(InfluxParser.WHITESPACE);
			this.state = 149;
			this.match(InfluxParser.THEN);
			this.state = 150;
			this.match(InfluxParser.WHITESPACE);
			this.state = 151;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public defType(): DefTypeContext {
		let _localctx: DefTypeContext = new DefTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, InfluxParser.RULE_defType);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case InfluxParser.WHITESPACE:
			case InfluxParser.NEWLINE:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			case InfluxParser.EMA:
				{
				this.state = 154;
				this.match(InfluxParser.EMA);
				}
				break;
			case InfluxParser.RSI:
				{
				this.state = 155;
				this.match(InfluxParser.RSI);
				}
				break;
			case InfluxParser.MACD:
				{
				this.state = 156;
				this.match(InfluxParser.MACD);
				}
				break;
			case InfluxParser.ENDPOINT:
				{
				this.state = 157;
				this.match(InfluxParser.ENDPOINT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public organization(): OrganizationContext {
		let _localctx: OrganizationContext = new OrganizationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, InfluxParser.RULE_organization);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public username(): UsernameContext {
		let _localctx: UsernameContext = new UsernameContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, InfluxParser.RULE_username);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.match(InfluxParser.USERNAME);
			this.state = 163;
			this.match(InfluxParser.WHITESPACE);
			this.state = 164;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public password(): PasswordContext {
		let _localctx: PasswordContext = new PasswordContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, InfluxParser.RULE_password);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(InfluxParser.PASSWORD);
			this.state = 167;
			this.match(InfluxParser.WHITESPACE);
			this.state = 168;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, InfluxParser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public period(): PeriodContext {
		let _localctx: PeriodContext = new PeriodContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, InfluxParser.RULE_period);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 172;
			this.match(InfluxParser.PERIOD);
			this.state = 173;
			this.match(InfluxParser.WHITESPACE);
			this.state = 174;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public url(): UrlContext {
		let _localctx: UrlContext = new UrlContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, InfluxParser.RULE_url);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this.match(InfluxParser.URL);
			this.state = 177;
			this.match(InfluxParser.WHITESPACE);
			this.state = 178;
			this.match(InfluxParser.URL_STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ema1(): Ema1Context {
		let _localctx: Ema1Context = new Ema1Context(this._ctx, this.state);
		this.enterRule(_localctx, 28, InfluxParser.RULE_ema1);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ema2(): Ema2Context {
		let _localctx: Ema2Context = new Ema2Context(this._ctx, this.state);
		this.enterRule(_localctx, 30, InfluxParser.RULE_ema2);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interval(): IntervalContext {
		let _localctx: IntervalContext = new IntervalContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, InfluxParser.RULE_interval);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 184;
			this.match(InfluxParser.INTERVAL);
			this.state = 185;
			this.match(InfluxParser.WHITESPACE);
			this.state = 186;
			this.match(InfluxParser.LITERALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public description(): DescriptionContext {
		let _localctx: DescriptionContext = new DescriptionContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, InfluxParser.RULE_description);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 188;
			this.match(InfluxParser.DESCRIPTION);
			this.state = 189;
			this.match(InfluxParser.WHITESPACE);
			this.state = 190;
			this.match(InfluxParser.TEXT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pricekey(): PricekeyContext {
		let _localctx: PricekeyContext = new PricekeyContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, InfluxParser.RULE_pricekey);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.match(InfluxParser.PRICEKEY);
			this.state = 193;
			this.match(InfluxParser.WHITESPACE);
			this.state = 194;
			this.match(InfluxParser.LITERALS);
			this.state = 199;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === InfluxParser.T__0) {
				{
				{
				this.state = 195;
				this.match(InfluxParser.T__0);
				this.state = 196;
				this.match(InfluxParser.LITERALS);
				}
				}
				this.state = 201;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public requestMethod(): RequestMethodContext {
		let _localctx: RequestMethodContext = new RequestMethodContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, InfluxParser.RULE_requestMethod);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 202;
			this.match(InfluxParser.METHOD);
			this.state = 203;
			this.match(InfluxParser.WHITESPACE);
			this.state = 204;
			this.match(InfluxParser.REQUESTMETHOD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public requestHeaders(): RequestHeadersContext {
		let _localctx: RequestHeadersContext = new RequestHeadersContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, InfluxParser.RULE_requestHeaders);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 206;
			this.match(InfluxParser.HEADERS);
			this.state = 207;
			this.match(InfluxParser.WHITESPACE);
			{
			{
			this.state = 208;
			this.match(InfluxParser.LITERALS);
			this.state = 209;
			this.match(InfluxParser.T__1);
			this.state = 210;
			this.match(InfluxParser.TEXT);
			}
			this.state = 218;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === InfluxParser.T__2) {
				{
				{
				this.state = 212;
				this.match(InfluxParser.T__2);
				this.state = 213;
				this.match(InfluxParser.LITERALS);
				this.state = 214;
				this.match(InfluxParser.T__1);
				this.state = 215;
				this.match(InfluxParser.TEXT);
				}
				}
				this.state = 220;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public requestBasicAuth(): RequestBasicAuthContext {
		let _localctx: RequestBasicAuthContext = new RequestBasicAuthContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, InfluxParser.RULE_requestBasicAuth);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 221;
			this.match(InfluxParser.BASICAUTH);
			this.state = 222;
			this.match(InfluxParser.WHITESPACE);
			this.state = 223;
